some refactoring with optimization